2013-05-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-05-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-05-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-05-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.usertasks:
	* Titania.userprefs: 

2013-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* files: 

2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* files:
	* Titania.userprefs: 

2013-05-07  Holger Seelig  <holger.seelig@yahoo.de>

	* plugin.cpp:
	* Makefile.am:
	* libtitania-mozilla.cproj: 

2013-05-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.usertasks: 

2013-05-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.usertasks:
	* Titania.userprefs: 

2013-05-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-04-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.sln:
	* test.py:
	* ChangeLog:
	* Makefile.am:
	* libtitania-python.cproj:
	* PyX3D.cpp:
	* PyBrowser.h:
	* PyBrowser.cpp:
	* PySFVec3f.h:
	* PySFVec3f.cpp: 

2013-04-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.sln:
	* Titania.userprefs: 

2013-04-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-04-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-04-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.usertasks: 

2013-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.sln: 

2013-03-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-03-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.usertasks:
	* Titania.userprefs: 

2013-03-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-03-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 
