@@ -1,16 +1,16 @@
 ﻿<Properties>
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Release" />
-  <MonoDevelop.Ide.Workbench ActiveDocument="libtitania-x3d/Titania/X3D/Components/Rendering/X3DGeometryNode.h">
+  <MonoDevelop.Ide.Workbench ActiveDocument="libtitania-standard/Titania/Math/Numbers/Quaternion.h">
     <Files>
       <File FileName="experimental/main.cpp" Line="494" Column="1" />
-      <File FileName="libtitania-x3d/Titania/X3D/Components/Geometry3D/IndexedFaceSet.h" Line="136" Column="23" />
-      <File FileName="libtitania-x3d/Titania/X3D/Components/Geometry3D/IndexedFaceSet.cpp" Line="279" Column="1" />
-      <File FileName="libtitania-x3d/Titania/X3D/Components/Geometry3D/Extrusion.h" Line="180" Column="16" />
-      <File FileName="libtitania-x3d/Titania/X3D/Components/Geometry3D/Extrusion.cpp" Line="281" Column="1" />
-      <File FileName="Library/Examples/Moebius/index.wrl" Line="20" Column="19" />
-      <File FileName="Titania/share/titania/pages/about/gears.wrl" Line="229" Column="3" />
-      <File FileName="../../../../usr/include/c++/4.7/bits/deque.tcc" Line="139" Column="6" />
-      <File FileName="libtitania-x3d/Titania/X3D/Components/Rendering/X3DGeometryNode.h" Line="139" Column="6" />
+      <File FileName="libtitania-standard/Titania/Math/Numbers/Rotation4.h" Line="591" Column="78" />
+      <File FileName="libtitania-standard/Titania/Math/Numbers/Quaternion.h" Line="742" Column="11" />
+      <File FileName="libtitania-standard/Titania/Math/Algorithms/SquadInterpolator.h" Line="62" Column="19" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Interpolation/SquadOrientationInterpolator.h" Line="144" Column="40" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Interpolation/SquadOrientationInterpolator.cpp" Line="100" Column="29" />
+      <File FileName="Library/Tests/Interpolation/SquadOrientationInterpolator.wrl" Line="45" Column="4" />
+      <File FileName="libtitania-standard/Titania/Math/Functional.h" Line="129" Column="12" />
+      <File FileName="libtitania-standard/Titania/Math/Algorithms/SquadInterpolator.cpp" Line="55" Column="1" />
     </Files>
     <Pads>
       <Pad Id="ProjectPad">
@@ -29,6 +29,7 @@
               </Node>
             </Node>
             <Node name="Tests" expanded="True">
+              <Node name="Interpolation" expanded="True" />
               <Node name="Rendering" expanded="True" />
               <Node name="Scripting" expanded="True" />
               <Node name="Shape" expanded="True" />
@@ -42,6 +43,12 @@
           <Node name="libtitania-standard" expanded="True">
             <Node name="Titania" expanded="True">
               <Node name="Basic" expanded="True" />
+              <Node name="Math" expanded="True">
+                <Node name="Algorithms" expanded="True" />
+                <Node name="Numbers" expanded="True">
+                  <Node name="Quaternion.h" selected="True" />
+                </Node>
+              </Node>
             </Node>
           </Node>
           <Node name="libtitania-x3d" expanded="True">
@@ -59,12 +66,11 @@
                   <Node name="Geometry3D" expanded="True" />
                   <Node name="Geospatial" expanded="True" />
                   <Node name="Grouping" expanded="True" />
+                  <Node name="Interpolation" expanded="True" />
                   <Node name="Networking" expanded="True" />
                   <Node name="NURBS" expanded="True" />
                   <Node name="PointingDeviceSensor" expanded="True" />
-                  <Node name="Rendering" expanded="True">
-                    <Node name="X3DGeometryNode.h" selected="True" />
-                  </Node>
+                  <Node name="Rendering" expanded="True" />
                   <Node name="Scripting" expanded="True" />
                   <Node name="Shaders" expanded="True" />
                 </Node>
@@ -82,6 +88,7 @@
               </Node>
             </Node>
           </Node>
+          <Node name="Papers" expanded="True" />
           <Node name="test" expanded="True" />
           <Node name="Titania" expanded="True">
             <Node name="share" expanded="True">
