@@ -170,14 +170,19 @@ simple_slerp (const Type & source, const Type & destination, T t)
 {
 	T cosom = dot (source, destination);
 
-	if (cosom > -1 and cosom < 1)
-	{
-		T omega = std::acos (cosom);
-		return (source * std::sin (omega * (1 - t)) + destination * std::sin (omega * t)) / std::sin (omega);
-	}
-	else
-		// if the angle is small, use linear interpolation
-		return lerp (source, destination, t);
+	if (cosom <= -1)
+		throw std::domain_error ("slerp is not possible: vectors are inverse collinear.");
+
+	if (cosom >= 1) // both normal vectors are equal
+		return source;
+
+	T omega = std::acos (cosom);
+	T sinom = std::sin  (omega);
+
+	T scale0 = std::sin ((1 - t) * omega);
+	T scale1 = std::sin (t * omega);
+
+	return (scale0 * source + scale1 * destination) / sinom;
 }
 
 ///  Returns true if @a i is a power of two otherwise false.
