@@ -1,5 +1,9 @@
 2013-05-27  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* SquadOrientationInterpolator.wrl: 
+
+2013-05-27  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Library.mdproj:
 	* ParticleShape.wrl:
 	* OrientationInterpolator.wrl:
