@@ -1,5 +1,10 @@
 2013-05-27  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Functional.h:
+	* Quaternion.h: 
+
+2013-05-27  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Makefile.am:
 	* Functional.h:
 	* libtitania-standard.cproj:
